--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html" class="active">Flow</a></li>
           <li><a href="index.html#robots">Robots</a></li>
-          <li><a href="index.html#solutions">Solutions</a></li>
+          <li><a href="index.html#products">products</a></li>
           <li><a href="index.html#team">Team</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
